----------------------------------
Release: 4.0.M3
Date:
----------------------------------
Changes/New Features:

CAY-1991 More control over generated String property names
CAY-1992 Allow to exclude DataMap java class from Modeler class generation
CAY-1995 Add support for iterators to Select
CAY-2001 Saving a display state of Project
CAY-2004 EJBQL: Support for ordering on aggregate expressions

Bug Fixes:

CAY-1987 Widen types before performing in-memory evaluation of qualifiers using j.l.Number subclasses
CAY-1990 Incorrect display of the raw SQL query in Modeler
CAY-1993 Reverse Engineering does not work with PostgreSQL database
CAY-1994 Modeler Migration Tool Shows No Changes
CAY-1997 Difference in NULL handling inside the path between PropertyUtils and DataObject.readNestedProperty
CAY-1998 Speeding up PropertyUtils
CAY-1999 Unneeded Property import for superclasses with no properties

----------------------------------
Release: 4.0.M2
Date: March 18, 2015
----------------------------------
Changes/New Features:

CAY-1267 Some changes to LogDialog
CAY-1826 Merge Entity Attributes and Relationships tabs together with one toolbar.
CAY-1839 Allow to link DataMaps to DataNodes from DataNode editor.
CAY-1841 Filters for Left-hand project navigator
CAY-1842 Remove Listeners support from the Modeler 
CAY-1843 DataMap v7: Stop saving listeners in DataMap, add upgrade handler
CAY-1845 Upgrade javadoc plugin to 2.9.1 
CAY-1846 Reworking of callback mapping
CAY-1847 Make ConverterFactory extensible
CAY-1848 New method: ObjectContext.selectOne(Select query) 
CAY-1851 Generate default serialVersionUID for generated java classes to avoid eclipse warnings
CAY-1852 Straighten thread model and synchronization in the Modeler 
CAY-1855 Iterated and paginated queries must print result counts 
CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 
CAY-1860 In-memory matching of DataObjects against ObjectId or int